# Practise-CPP

./: .clang-format  .clang-tidy  1109.cpp  1116.cpp  1119-Effective-Modern.cpp  CMakeLists.txt  main.cpp
clog/: CLG_log.h  CMakeLists.txt  MEM_guardedalloc.h  clog.cc
